--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+
+    <style type="text/css">
+        #mc_embed_signup {
+            background: #fff;
+            clear: left;
+            font: 14px Helvetica, Arial, sans-serif;
+            width: '80%';
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
     <!--
     
 
@@ -272,57 +287,82 @@
             <div class="col-lg-8 m-auto mb-5">
                 <h1 class="h2">¡Te queremos conocer!</h1>
                 <h2 class="text-orange">Contacto</h2>
-                <p class="gray-text">
-                    Suscribete a nuestro Mail List
-                </p>
-                <!-- Begin Mailchimp Signup Form -->
-                <div id="mc_embed_signup" class="container">
-                    <form
-                        action="https://neekdna.us1.list-manage.com/subscribe/post?u=c49c696187df6946fdcd439f9&amp;id=dcb0e9b608"
-                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                        target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll">
-                            <!-- <h2>Suscríbete en la lista de mailing Neek'dna para recibir noticias y promociones</h2> -->
-                            <div class="indicates-required"><span class="asterisk">*</span> campo requerido</div>
-                            <div class="mc-field-group">
-                                <label for="mce-EMAIL">Correo electrónico <span class="asterisk">*</span>
-                                </label>
-                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                            </div>
-                            <div class="mc-field-group">
-                                <label for="mce-FNAME">Nombre(s) </label>
-                                <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                            </div>
-                            <div class="mc-field-group">
-                                <label for="mce-LNAME">Apellido paterno</label>
-                                <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-                            </div>
-                            <div class="mc-field-group size1of2">
-                                <label for="mce-BIRTHDAY-month">Fecha de cumpleaños </label>
-                                <div class="datefield">
-                                    <span class="subfield monthfield"><input class="birthday " type="text"
-                                            pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2"
-                                            name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> /
-                                    <span class="subfield dayfield"><input class="birthday " type="text"
-                                            pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2"
-                                            name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span>
-                                    <span class="small-meta nowrap">( mm / dd )</span>
+
+                <div id="mc_embed_shell">
+
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://neekdna.us1.list-manage.com/subscribe/post?u=c49c696187df6946fdcd439f9&amp;id=dcb0e9b608&amp;f_id=007a33e2f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank">
+                            <div id="mc_embed_signup_scroll">
+                                <h3>Suscríbete a nuestra lista de correos para recibir información interesante del mundo
+                                    del tatuaje, piercing y modificación corporal.</h3>
+                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="container">
+                                    <div class="row mb-3">
+                                        <div class="mc-field-group col-6 mr-2"><label for="mce-FNAME"
+                                                class="form-label">First Name
+                                            </label><input type="text" name="FNAME" class="text form-control"
+                                                id="mce-FNAME" value=""></div>
+
+                                        <div class="mc-field-group col-6 ml-2"><label for="mce-LNAME"
+                                                class="form-label">Last Name
+                                            </label><input type="text" name="LNAME" class="text form-control"
+                                                id="mce-LNAME" value=""></div>
+                                    </div>
+                                    <div class="row  mb-3">
+                                        <div class="mc-field-group col-12"><label for="mce-EMAIL"
+                                                class="form-label">Email Address <span
+                                                    class="asterisk"></span></label><input type="email" name="EMAIL"
+                                                class="required email form-control" id="mce-EMAIL" required="" value="">
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="mc-field-group col-6"><label for="mce-PHONE"
+                                                class="form-label">Phone Number
+                                            </label><input type="text" name="PHONE" class="REQ_CSS form-control"
+                                                id="mce-PHONE" value=""></div>
+                                        <div class="mc-field-group size1of2 col-6"><label for="mce-BIRTHDAY-month"
+                                                class="form-label">Birthday
+                                            </label>
+                                            <div class="datefield row">
+                                                <div class="subfield monthfield col-6">
+
+                                                    <input class="birthday REQ_CSS form-control" type="text"
+                                                        pattern="[0-9]" placeholder="MM" size="2" maxlength="2"
+                                                        name="BIRTHDAY[month]" id="mce-BIRTHDAY-month" value="">
+                                                </div>
+                                                <div class="subfield dayfield col-6">
+                                                    <input class="birthday REQ_CSS form-control" type="text"
+                                                        pattern="[0-9]*" placeholder="DD" size="2" maxlength="2"
+                                                        name="BIRTHDAY[day]" id="mce-BIRTHDAY-day" value="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    /* real people should not fill this in and expect good things - do not remove this
+                                    or risk form bot signups */
+                                    <input type="text" name="b_c49c696187df6946fdcd439f9_dcb0e9b608" tabindex="-1"
+                                        value="">
+                                </div>
+                                <div class="optionalParent row  mb-3">
+                                    <div class="clear foot col-12">
+                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                            class="button mailchimp-submit" value="Subscribe">
+                                    </div>
                                 </div>
                             </div>
-                            <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                        name="b_c49c696187df6946fdcd439f9_dcb0e9b608" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Suscribir" name="subscribe"
-                                        id="mc-embedded-subscribe" class="button"></div>
-                                <p>Al dar click en "SUSCRIBIR" estás aceptando nuestros términos de uso y aviso de
-                                    privacidad
-                                </p>
-                            </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
+
             </div>
         </div>
         <!-- End Mailchimp Signup Form -->
@@ -374,6 +414,10 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/templatemo.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+    <script
+        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+
     <!-- End Script -->
 </body>
 
