--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <!-- <div class="carousel-item active">
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
@@ -110,37 +110,25 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1">Piercing Aftercare una mezcla calmante y humectante.</h1>
-                                <h3>Usa productos diseñados para sanar, no para irritar.
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
+            </div> -->
+            <div class="carousel-item active">
+                <div class="container-fluid carousel-img-aftercare">
+                    <img class="img-fluid w-100" src="./assets/img/banners/aftercare.png" alt="">
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1">Piercing Aftercare una mezcla calmante y humectante.</h1>
-                                <h3>Usa productos diseñados para sanar, no para irritar.
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
+                <div class="container-fluid carousel-img-piercing">
+                    <img class="img-fluid w-100" src="./assets/img/banners/piercing.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container-fluid carousel-img-protect">
+                    <img class="img-fluid w-100" src="./assets/img/banners/protect.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container-fluid carousel-img-skincare">
+                    <img class="img-fluid w-100" src="./assets/img/banners/skincare.png" alt="">
                 </div>
             </div>
         </div>
@@ -197,16 +185,17 @@
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 1.png" alt="Brand Logo">
+                                            <img class="amb-img" src="assets/img/alienk_embajador.png"
+                                                alt="Alienk Inspieral">
                                         </div>
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 2.png" alt="Brand Logo">
+                                            <img class="amb-img" src="assets/img/dani_embajador.png" alt="Dani Parta">
                                         </div>
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 3.png" alt="Brand Logo">
+                                            <img class="amb-img" src="assets/img/edetsu_embajador.png" alt="Edetsu">
                                         </div>
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 4.png" alt="Brand Logo">
+                                            <img class="amb-img" src="assets/img/panke_embajador.png" alt="Panke 0M">
                                         </div>
                                     </div>
                                 </div>
@@ -216,39 +205,13 @@
                                 <div class="carousel-item">
                                     <div class="row">
                                         <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 1.png" alt="Brand Logo">
+                                            <img class="amb-img" src="assets/img/the_mak_evans_embajador.png"
+                                                alt="The Mak Evans">
                                         </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 2.png" alt="Brand Logo">
-                                        </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 3.png" alt="Brand Logo">
-                                        </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 4.png" alt="Brand Logo">
-                                        </div>
+
                                     </div>
                                 </div>
                                 <!--End Second slide-->
-
-                                <!--Third slide-->
-                                <div class="carousel-item">
-                                    <div class="row">
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 1.png" alt="Brand Logo">
-                                        </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 2.png" alt="Brand Logo">
-                                        </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 3.png" alt="Brand Logo">
-                                        </div>
-                                        <div class="col-3">
-                                            <img class="amb-img" src="assets/img/embajador 4.png" alt="Brand Logo">
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--End Third slide-->
 
                             </div>
                             <!--End Slides-->
