--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 </p>
             </div>
         </div>
+        <!-- Embajadores-->
         <div class="row text-center py-5">
             <div class="col-lg-8 m-auto mb-5">
                 <h1 class="h2">Nuestros Embajadores</h1>
@@ -229,6 +230,77 @@
                 </div>
             </div>
         </div>
+        <!-- End Embajadores-->
+
+
+        <!-- Líneas-->
+        <div class="row text-center py-5">
+            <div class="col-lg-8 m-auto mb-5">
+                <h1 class="h2">Nuestras Líneas</h1>
+            </div>
+
+            <div class="col-lg-12 m-auto tempaltemo-carousel">
+                <div class="row d-flex flex-row">
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="prev">
+                            <i class="text-light fas fa-chevron-left"></i>
+                        </a>
+                    </div>
+                    <!--End Controls-->
+
+                    <!--Carousel Wrapper-->
+                    <div class="col">
+                        <div class="carousel slide carousel-multi-item pt-2 pt-md-0" id="templatemo-slide-lines"
+                            data-bs-ride="carousel">
+                            <!--Slides-->
+                            <div class="product-links-wap" role="listbox">
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <img class="amb-img" src="assets/img/lineas/aftercare.png" alt="Aftercare">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <img class="amb-img" src="assets/img/lineas/piercing.png" alt="Piercing">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <img class="amb-img" src="assets/img/lineas/protect.png" alt="Protect">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <img class="amb-img" src="assets/img/lineas/skincare.png" alt="Skincare">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--End Carousel Wrapper-->
+
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="next">
+                            <i class="text-light fas fa-chevron-right"></i>
+                        </a>
+                    </div>
+                    <!--End Controls-->
+                </div>
+            </div>
+        </div>
+        <!-- End Líneas-->
+
+
         <div class="row text-center py-5">
             <div class="col-lg-11 m-auto mb-5">
                 <h1 class="h2">Síguenos en TikTok</h1>
