--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="flex-fill">
                     <ul class="ms-auto nav navbar-nav d-flex justify-content-end gap-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Productos</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Contacto</a>
