added product detail page
Added tattoo skincare details page

--- a/productos.html
+++ b/productos.html
@@ -106,7 +106,8 @@
                         <img src="assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Aftercare</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/tattoo-aftercare.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                     <div class="col-6">
