added bottom section to product detail
Added bottom section to product details page

--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -341,6 +341,43 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container">
+            <h2 class="more-products text-center">¿Ya viste nuestros kits Skincare y Tattoo Aftercare?
+            </h2>
+            <div class="row">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
+                            <div class="product-button-container">
+                                <a href="/producto/tattoo-aftercare.html"><button type="button"
+                                        class="btn btn-dark button-product">Ver</button></a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <img src="../assets/img/products/tattoo_cleansing_gel/front.png" alt="Image"
+                                class="img-fluid">
+                            <div class="product-button-container">
+                                <a href="/producto/tattoo-aftercare.html"> <button type="button"
+                                        class="btn btn-dark button-product">Ver</button>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <img src="../assets/img/products/tattoo_cleansing_gel/front.png" alt="Image"
+                                class="img-fluid">
+                            <div class="product-button-container">
+                                <a href="/producto/tattoo-aftercare.html"> <button type="button"
+                                        class="btn btn-dark button-product">Ver</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
