First row products
Added the first row of products

--- a/producto/tattoo-aftercare.html
+++ b/producto/tattoo-aftercare.html
@@ -73,7 +73,7 @@
 
 
     <!-- Start Slider  -->
-    <section class="container-fluid pt-5 pb-3">
+    <section class="container-fluid pt-5 pb-3 px-0">
 
         <div class="container">
             <div class="row">
@@ -348,29 +348,28 @@
             </h2>
             <div class="row">
                 <div class="col-12">
-                    <div class="row">
+                    <div class="row row-more-products">
                         <div class="col-4">
-                            <img src="../assets/img/products/tattoo_aftercare/front.png" alt="Image" class="img-fluid">
+                            <img src="../assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-aftercare.html"><button type="button"
-                                        class="btn btn-dark button-product">Ver</button></a>
+                                <a href="/producto/skin-tattoo-moisturiser.html"><button type="button"
+                                        class="btn btn-dark button-product">Crema</button></a>
                             </div>
                         </div>
                         <div class="col-4">
                             <img src="../assets/img/products/tattoo_cleansing_gel/front.png" alt="Image"
                                 class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-aftercare.html"> <button type="button"
-                                        class="btn btn-dark button-product">Ver</button>
+                                <a href="/producto/tattoo-cleansing-gel.html"> <button type="button"
+                                        class="btn btn-dark button-product">Gel</button>
                                 </a>
                             </div>
                         </div>
                         <div class="col-4">
-                            <img src="../assets/img/products/tattoo_cleansing_gel/front.png" alt="Image"
-                                class="img-fluid">
+                            <img src="../assets/img/products/all.png" alt="Image" class="img-fluid">
                             <div class="product-button-container">
-                                <a href="/producto/tattoo-aftercare.html"> <button type="button"
-                                        class="btn btn-dark button-product">Ver</button>
+                                <a href="/productos.html"> <button type="button" class="btn btn-dark button-product">Ver
+                                        Todo</button>
                                 </a>
                             </div>
                         </div>
