--- a/productos.html
+++ b/productos.html
@@ -114,7 +114,8 @@
                         <img src="assets/img/products/tattoo_cleansing_gel/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Cleansing Gel</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/tattoo-cleansing-gel.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +128,8 @@
                         <img src="assets/img/products/skin_tattoo_moist/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Skin Tattoo Moisturiser</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/skin-tattoo-moisturiser.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                 </div>
