added bottom line products
Added red line products

--- a/productos.html
+++ b/productos.html
@@ -181,7 +181,8 @@
                         <img src="assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Moisturizing Balm</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/tattoo-moisturizing-balm.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                     <div class="col-3">
