added product links
Added links to product pages in main product page

--- a/productos.html
+++ b/productos.html
@@ -167,14 +167,16 @@
                         <img src="assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Dermo Clean Foam</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/dermo-clean-foam.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                     <div class="col-3">
                         <img src="assets/img/products/eco_recarga/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">ECO-RECARGA Dermo Clean Foam</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/eco-recarga-dermo-clean-foam.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                     <div class="col-3">
@@ -189,7 +191,8 @@
                         <img src="assets/img/products/waste_absorbent/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Waste Absorbent</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/waste-absorbent.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                 </div>
