--- a/productos.html
+++ b/productos.html
@@ -143,16 +143,18 @@
                 <div class="row">
                     <div class="col-6">
                         <img src="assets/img/products/piercing_aftercare_gel/front.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Piercing Aftercarer</h3>
+                        <h3 class="product-subtitle">Piercing Aftercare</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/piercing-aftercare-gel.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                     <div class="col-6">
                         <img src="assets/img/products/piercing_aftercare_sol/front.png" alt="Image" class="img-fluid">
-                        <h3 class="product-subtitle">Piercing Aftercarer</h3>
+                        <h3 class="product-subtitle">Piercing Aftercare</h3>
                         <div class="product-button-container">
-                            <button type="button" class="btn btn-dark button-product">Ver</button>
+                            <a href="/producto/piercing-aftercare-sol.html"><button type="button"
+                                    class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
                 </div>
