--- a/index.html
+++ b/index.html
@@ -63,23 +63,25 @@
                             <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Nosotros</a>
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Novedades</a>
+                            <a class="nav-link" href="novedades.html">Novedades</a>
                         </li>
                     </ul>
                 </div>
-                <div class="navbar align-self-center d-flex">
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fab fa-fw fa-whatsapp fa-2xl text-white large-icons ms-3"></i>
+                <div class="navbar align-self-center d-flex ms-3">
+                    <a class="nav-icon position-relative text-decoration-none"
+                        href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
+
+                        <img src="assets/img/whatsapp.svg">
                     </a>
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fa fa-fw fa-cart-plus fa-2xl text-white large-icons ms-3"></i>
-                    </a>
+                    <a class="nav-icon position-relative text-decoration-none"
+                        href="https://www.mercadolibre.com.mx/pagina/neekdna">
+                        <img src="assets/img/carrito.svg"> </a>
                 </div>
             </div>
 
@@ -412,20 +414,29 @@
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left footer-icons">
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="http://facebook.com/"><i
-                                    class="fab fa-facebook-f fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://www.instagram.com/neekdna">
+                                <img src="assets/img/icons/instagram.svg" /></a>
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                                href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
-                        </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="https://twitter.com/"><i
-                                    class="fab fa-twitter fa-lg fa-fw"></i></a>
+                                href="https://www.tiktok.com/@neekdna">
+                                <img src="assets/img/icons/tiktok.svg" /></a>
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                                href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
+                                href="https://www.facebook.com/NeekDna">
+                                <img src="assets/img/icons/facebook.svg" /></a>
+                        </li>
+                        <li class="list-inline-item border border-light rounded-circle text-center">
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://www.mercadolibre.com.mx/pagina/neekdna">
+                                <img src="assets/img/icons/shop.svg" /></a>
+                        </li>
+                        <li class="list-inline-item border border-light rounded-circle text-center">
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
+                                <img src="assets/img/whatsapp.svg" /></a>
                         </li>
                     </ul>
                 </div>
