added header and footer links
Added all header and footer links and styles

--- a/contacto.html
+++ b/contacto.html
@@ -23,12 +23,13 @@
 
 <body>
 
+
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="../index.html">
-                <img src="../assets/img/logo.png" alt="Logo" width="53" height="59">
+            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+                <img src="assets/img/logo.png" alt="Logo" width="53" height="59">
             </a>
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
@@ -42,26 +43,28 @@
                 <div class="flex-fill">
                     <ul class="ms-auto nav navbar-nav d-flex justify-content-end gap-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="../productos.html">Productos</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Nosotros</a>
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Novedades</a>
+                            <a class="nav-link" href="novedades.html">Novedades</a>
                         </li>
                     </ul>
                 </div>
-                <div class="navbar align-self-center d-flex">
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fab fa-fw fa-whatsapp fa-2xl text-white large-icons ms-3"></i>
+                <div class="navbar align-self-center d-flex ms-3">
+                    <a class="nav-icon position-relative text-decoration-none" target="_blank"
+                        href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
+
+                        <img src="assets/img/whatsapp.svg">
                     </a>
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fa fa-fw fa-cart-plus fa-2xl text-white large-icons ms-3"></i>
-                    </a>
+                    <a class="nav-icon position-relative text-decoration-none" target="_blank"
+                        href="https://www.mercadolibre.com.mx/pagina/neekdna">
+                        <img src="assets/img/carrito.svg"> </a>
                 </div>
             </div>
 
@@ -212,20 +215,29 @@
                 <div class="col-auto m-auto">
                     <ul class="list-inline text-left footer-icons">
                         <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="http://facebook.com/"><i
-                                    class="fab fa-facebook-f fa-lg fa-fw"></i></a>
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://www.instagram.com/neekdna">
+                                <img src="assets/img/icons/instagram.svg" /></a>
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                                href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg fa-fw"></i></a>
-                        </li>
-                        <li class="list-inline-item border border-light rounded-circle text-center">
-                            <a class="text-light text-decoration-none" target="_blank" href="https://twitter.com/"><i
-                                    class="fab fa-twitter fa-lg fa-fw"></i></a>
+                                href="https://www.tiktok.com/@neekdna">
+                                <img src="assets/img/icons/tiktok.svg" /></a>
                         </li>
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
-                                href="https://www.linkedin.com/"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
+                                href="https://www.facebook.com/NeekDna">
+                                <img src="assets/img/icons/facebook.svg" /></a>
+                        </li>
+                        <li class="list-inline-item border border-light rounded-circle text-center">
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://www.mercadolibre.com.mx/pagina/neekdna">
+                                <img src="assets/img/icons/shop.svg" /></a>
+                        </li>
+                        <li class="list-inline-item border border-light rounded-circle text-center">
+                            <a class="text-light text-decoration-none" target="_blank"
+                                href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
+                                <img src="assets/img/whatsapp.svg" /></a>
                         </li>
                     </ul>
                 </div>
@@ -241,7 +253,6 @@
 
 
     </footer>
-    <!-- End Footer -->
 
     <!-- Start Script -->
     <script src="../assets/js/jquery-1.11.0.min.js"></script>
