--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex ms-3">
-                    <a class="nav-icon position-relative text-decoration-none"
+                    <a class="nav-icon position-relative text-decoration-none" target="_blank"
                         href="https://api.whatsapp.com/send?phone=525582461413&text=%C2%A1Hola!%20Estoy%20en%20la%20tienda%20Neekdna%20Shop%20y%20quiero%20pedir%20m%C3%A1s%20informaci%C3%B3n">
 
                         <img src="assets/img/whatsapp.svg">
                     </a>
-                    <a class="nav-icon position-relative text-decoration-none"
+                    <a class="nav-icon position-relative text-decoration-none" target="_blank"
                         href="https://www.mercadolibre.com.mx/pagina/neekdna">
                         <img src="assets/img/carrito.svg"> </a>
                 </div>
@@ -335,7 +335,6 @@
                             <div id="mc_embed_signup_scroll">
                                 <h3>Suscríbete a nuestra lista de correos para recibir información interesante del mundo
                                     del tatuaje, piercing y modificación corporal.</h3>
-                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                                 <div class="container">
                                     <div class="row mb-3">
                                         <div class="mc-field-group col-6 mr-2"><label for="mce-FNAME"
