--- a/nosotros.html
+++ b/nosotros.html
@@ -103,29 +103,34 @@
         </div>
 
         <div class="row mb-5">
-            <div class="col-6">
+            <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title">Misión</h2>
-                <p class="text-nosotros me-5">
+                <p class="text-nosotros me-lg-5">
                     Desarrollar, elaborar, comercializar y distribuir productos de calidad premium para el cuidado de la
                     piel, los cuales garanticen la satisfacción plena de tatuadores, artistas corporales y todos
                     aquellos que gozan de realizarse tatuajes y perforaciones.
                 </p>
             </div>
 
-            <div class="col-6">
-
+            <div class="col-xs-12 col-lg-6">
                 <img src="assets/img/desde-2009.svg" alt="Image" class="img-fluid">
 
             </div>
         </div>
 
         <div class="row mb-5">
-            <div class="col-6">
-
-                <img src="assets/img/familia.svg" alt="Image" class="img-fluid">
-
+            <div class="col-xs-12 col-lg-6 d-lg-none">
+                <h2 class="product-title">Visión</h2>
+                <p class="text-nosotros me-lg-5">
+                    Ser una empresa y marca reconocida, la cual asegure la satisfacción de nuestros clientes y
+                    consumidores a través de productos desarrollados y elaborados por personas especializadas en cada
+                    área y en conjunto con amantes del arte del tatuaje y la modificación corporal.
+                </p>
             </div>
-            <div class="col-6">
+            <div class="col-xs-12 col-lg-6">
+                <img src="assets/img/familia.svg" alt="Image" class="img-fluid">
+            </div>
+            <div class="col-xs-12 col-lg-6  d-none d-lg-flex">
                 <h2 class="product-title">Visión</h2>
                 <p class="text-nosotros me-5">
                     Ser una empresa y marca reconocida, la cual asegure la satisfacción de nuestros clientes y
@@ -184,7 +189,7 @@
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
-                    <ul class="list-inline text-left footer-icons">
+                    <ul class="list-inline text-left">
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
