--- a/productos.html
+++ b/productos.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="row row-product">
-            <div class="col-6">
+            <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> TATTOO AFTERCARE</h2>
                 <div class="row">
                     <div class="col-6">
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> TATTOO SKINCARE</h2>
                 <div class="row">
                     <div class="col-6">
@@ -140,7 +140,7 @@
 
 
         <div class="row row-product">
-            <div class="col-6">
+            <div class="col-xs-12 col-lg-6">
                 <h2 class="product-title"> PIERCING AFTERCARE</h2>
                 <div class="row">
                     <div class="col-6">
@@ -167,7 +167,7 @@
             <div class="col-12">
                 <h2 class="product-title">PRO-TEC</h2>
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-6 col-lg-3">
                         <img src="assets/img/products/dermo_clean_foam/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Dermo Clean Foam</h3>
                         <div class="product-button-container">
@@ -175,7 +175,7 @@
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-6 col-lg-3">
                         <img src="assets/img/products/eco_recarga/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">ECO-RECARGA Dermo Clean Foam</h3>
                         <div class="product-button-container">
@@ -183,7 +183,7 @@
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-6 col-lg-3">
                         <img src="assets/img/products/tattoo_moist_balm/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Tattoo Moisturizing Balm</h3>
                         <div class="product-button-container">
@@ -191,7 +191,7 @@
                                     class="btn btn-dark button-product">Ver</button></a>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-6 col-lg-3">
                         <img src="assets/img/products/waste_absorbent/front.png" alt="Image" class="img-fluid">
                         <h3 class="product-subtitle">Waste Absorbent</h3>
                         <div class="product-button-container">
@@ -212,7 +212,7 @@
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
-                    <ul class="list-inline text-left footer-icons">
+                    <ul class="list-inline text-left">
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
