--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
         </div>
         <!-- Embajadores-->
-        <div class="row text-center py-5">
+        <div class="row text-center py-5 d-none d-lg-block">
             <div class="col-lg-8 m-auto mb-5">
                 <h1 class="h2">Nuestros Embajadores</h1>
                 <p class="gray-text">
@@ -171,9 +171,9 @@
                 <div class="row d-flex flex-row">
                     <!--Controls-->
                     <div class="col-1 align-self-center">
-                        <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="prev">
+                        <!--  <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="prev">
                             <i class="text-light fas fa-chevron-left"></i>
-                        </a>
+                        </a> -->
                     </div>
                     <!--End Controls-->
 
@@ -224,9 +224,96 @@
 
                     <!--Controls-->
                     <div class="col-1 align-self-center">
-                        <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="next">
+                        <!--  <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="next">
                             <i class="text-light fas fa-chevron-right"></i>
-                        </a>
+                        </a> -->
+                    </div>
+                    <!--End Controls-->
+                </div>
+            </div>
+        </div>
+        <!-- End Embajadores-->
+
+        <!-- Embajadores Small Devices-->
+        <div class="row text-center py-5 d-lg-none">
+            <div class="col-lg-8 m-auto mb-5">
+                <h1 class="h2">Nuestros Embajadores</h1>
+                <p class="gray-text">
+                    Ellos usan, recomiendan y confían en Neek’dna porque han comprobado su eficacia y compromiso.
+                </p>
+            </div>
+
+            <div class="col-lg-12 m-auto tempaltemo-carousel">
+                <div class="row d-flex flex-row">
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <!--  <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="prev">
+                            <i class="text-light fas fa-chevron-left"></i>
+                        </a> -->
+                    </div>
+                    <!--End Controls-->
+
+                    <!--Carousel Wrapper-->
+                    <div class="col">
+                        <div class="carousel slide carousel-multi-item pt-2 pt-md-0" id="templatemo-slide-brand"
+                            data-bs-ride="carousel">
+                            <!--Slides-->
+                            <div class="product-links-wap" role="listbox">
+
+                                <!--First slide-->
+                                <div class="carousel-item active">
+                                    <div class="row">
+                                        <div class="col-12 d-flex">
+                                            <img class="amb-img  m-auto" src="assets/img/alienk_embajador.png"
+                                                alt="Alienk Inspieral">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item ">
+                                    <div class="row">
+                                        <div class="col-12 d-flex">
+                                            <img class="amb-img  m-auto" src="assets/img/dani_embajador.png"
+                                                alt="Alienk Inspieral">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item ">
+                                    <div class="row">
+                                        <div class="col-12 d-flex">
+                                            <img class="amb-img m-auto" src="assets/img/edetsu_embajador.png"
+                                                alt="Alienk Inspieral">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item ">
+                                    <div class="row">
+                                        <div class="col-12 d-flex">
+                                            <img class="amb-img  m-auto" src="assets/img/panke_embajador.png"
+                                                alt="Alienk Inspieral">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="row">
+                                        <div class="col-12 d-flex">
+                                            <img class="amb-img  m-auto" src="assets/img/the_mak_evans_embajador.png"
+                                                alt="The Mak Evans">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--End Second slide-->
+
+                            </div>
+                            <!--End Slides-->
+                        </div>
+                    </div>
+                    <!--End Carousel Wrapper-->
+
+                    <!--Controls-->
+                    <div class="col-1 align-self-center">
+                        <!--  <a class="h1" href="#templatemo-slide-brand" role="button" data-bs-slide="next">
+                            <i class="text-light fas fa-chevron-right"></i>
+                        </a> -->
                     </div>
                     <!--End Controls-->
                 </div>
@@ -245,9 +332,9 @@
                 <div class="row d-flex flex-row">
                     <!--Controls-->
                     <div class="col-1 align-self-center">
-                        <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="prev">
+                        <!-- <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="prev">
                             <i class="text-light fas fa-chevron-left"></i>
-                        </a>
+                        </a> -->
                     </div>
                     <!--End Controls-->
 
@@ -292,9 +379,9 @@
 
                     <!--Controls-->
                     <div class="col-1 align-self-center">
-                        <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="next">
+                        <!--  <a class="h1" href="#templatemo-slide-lines" role="button" data-bs-slide="next">
                             <i class="text-light fas fa-chevron-right"></i>
-                        </a>
+                        </a> -->
                     </div>
                     <!--End Controls-->
                 </div>
@@ -411,7 +498,7 @@
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
-                    <ul class="list-inline text-left footer-icons">
+                    <ul class="list-inline text-left">
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
