--- a/producto/piercing-aftercare-sol.html
+++ b/producto/piercing-aftercare-sol.html
@@ -79,7 +79,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-xs/12 col-lg-6">
                     <div class="carousel">
                         <input type="radio" name="slides" checked="checked" id="slide-1">
                         <input type="radio" name="slides" id="slide-2">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <!-- End Slider -->
-                <div class="col-6">
+                <div class="col-xs-12 col-lg-6">
                     <div class="row">
                         <h2 class="product-details-title">Piercing Aftercare
                             </h>
@@ -228,20 +228,26 @@
             </div>
         </div>
         <div class="row">
-            <div class="row text-center mt-4">
-                <div class="col-lg-8 m-auto ">
+            <div class="container d-lg-none">
+                <div class="row text-center mt-4">
                     <h1 class="guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
+                    <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
+                </div>
+            </div>
+            <div class="row text-center mt-4 d-none d-lg-flex">
+                <div class=" col-lg-8 m-auto ">
+                    <h1 class=" guarantee-title">GARANTÍA TATTOO AFTERCARE</h1>
                     <img src="../assets/img/garantia-row.svg" alt="Guarantee" class="img-fluid my-4">
                 </div>
             </div>
         </div>
 
-        <div class="bg-dark mt-4 mb-4 p-5">
+        <div class="bg-dark mt-4 mb-4 p-xs-2 p-lg-5">
             <div class="container row">
-                <div class="col-6 m-auto ">
+                <div class="col-xs-12 col-lg-6 m-lg-auto mt-3">
                     <h3 class="text-white">RECOMENDACIONES DE USO</h3>
                 </div>
-                <div class="col-6">
+                <div class="col-xs-12 col-lg-6">
                     <div class="recommendations-carousel">
                         <input type="radio" name="recommendations-slides" checked="checked"
                             id="recommendations-slide-1">
@@ -346,7 +352,7 @@
         <div class="container py-5">
             <div class="row text-light ">
                 <div class="col-auto m-auto">
-                    <ul class="list-inline text-left footer-icons">
+                    <ul class="list-inline text-left">
                         <li class="list-inline-item border border-light rounded-circle text-center">
                             <a class="text-light text-decoration-none" target="_blank"
                                 href="https://www.instagram.com/neekdna">
